[package]
name = "leptos-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.14", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.14", features = ["csr"] }
web-sys = { version = "0.3.70", features = ["console"] }

[editor]
workspace-lsp-roots = ["src"]
